[gd_scene load_steps=2 format=3 uid="uid://dxhyuoe77v4wq"]

[ext_resource type="Script" path="res://inventory_ui/item_info_panel.gd" id="1_drrvb"]

[node name="ItemInfoPanel" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
offset_right = 295.0
offset_bottom = 100.0
script = ExtResource("1_drrvb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SelectedItemNameLabel" type="RichTextLabel" parent="HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="SelectedItemIcon" type="TextureRect" parent="HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="SelectedItemDescriptionLabel" type="RichTextLabel" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
fit_content = true
scroll_active = false
